main.css
# blue accent: #7BC9D0
# coral: #F48F7B
# teal: #0E989D
# purple: #4A3F8A
html {
	line-height: 1.5em;
	font-family: 'Fira Sans Condensed', sans-serif;
}

body {
	margin: auto;
	width: 100%;
        background-color: white;
        color: black;
}

article,
aside,
footer,
header,
nav,
section {
	display: block;
}

footer p {
	font-size: .7em;
	margin: 3em auto 2em auto;
	width: 701px;
}

article,
section {
	display: flex;
	flex-wrap: wrap;
	align-content: flex-start;
	align-items: center;
	width: 1175px;
	max-width: 100%;
	margin: auto;
}

article a {
	text-decoration: none;
	border-bottom: 2px solid #F48F7B;
	color: black;
	font-weight: 700;
}

section a {
	text-decoration: none;
	border-bottom: 2px solid #F48F7B;
	color: black;
	font-weight: 700;
}

footer a {
	text-decoration: none;
	border-bottom: 2px solid #F48F7B;
	color: black;
}

nav {
	font-size: 1.3em;
	margin: 2em 0 2em 15%;
	font-weight: 300;
}

nav a {
	text-decoration: none;
    font-weight: bold;
	color: black;
	margin-right: 1em;
	transition: .3s;
}

nav a:hover {
	border-bottom: 2px solid #F48F7B;
}

nav a.current {
	border-bottom: 2px solid #F48F7B;
}

h1 {
	font-size: 3em;
	margin: auto auto .3em 15%;
	font-family: 'Fira Sans', 'Roboto', sans-serif;
	font-weight: 900;
    color: #0E989D;
	border-bottom: 4px solid #F48F7B;
        display: inline-block;
        line-height: 0.85;
        text-shadow:
	    2px 2px white,
	    2px -2px white,
	    -2px 2px white,
	    -2px -2px white;
}

h2 {
	font-size: 1.5em;
	font-family: 'Fira Sans', 'Roboto', sans-serif;
	margin-left: 15%;
	font-weight: 600;
}

h3 {
	font-size: 1em;
	font-family: 'Fira Sans', 'Roboto', sans-serif;
	margin-left: 0;
	font-weight: 600;
}

blockquote,
ul {
	width: 700px;
	max-width: 95%;
}

ul.bio {
	width: 300px;
	margin: 1em;
	list-style-type: none;
        background-color: white;
        color: black;
        padding-bottom: 1em;
}
section.bio {
        width: 100%;
        background-color: white;
        margin-top: 30px;
        border: 4px solid #4A3F8A;
}

p {
	width: 790px;
	max-width: 95%;
}

p {
	font-size: 1.3em;
	line-height: 1.5em;
	margin: 1em auto 1em auto;
	font-weight: 300;
}

ul {
	font-size: 1.5em;
	line-height: 1.3em;
	margin: 1em auto 1em auto;
	font-weight: 300;
	list-style-type: circle;
}

ul.contact {
	list-style-type: none;
	line-height: 2em;
	font-size: 1.3em;
	margin: 0 0 0 20%;
}

blockquote {
	font-family: 'Fira Sans', sans-serif;
	font-size: 2.5em;
	font-weight: 600;
	margin: 2em .5em 3em .5em;
	line-height: 1.3em;
	border-left: .1em solid #0E989D;
	border-top: .1em solid #0E989D;
	border-bottom: .1em solid #0E989D;
	padding: .3em .3em .6em .6em;
        background-color: white;
        color: black;
}

blockquote.portfolio-left {
	font-family: 'Fira Sans Condensed', sans-serif;
	font-size: 1.3em;
	font-weight: 400;
	margin: 2em .5em 3em .5em;
	line-height: 1.3em;
	border-left: .1em solid #4A3F8A;
	border-top: .1em solid #4A3F8A;
	border-bottom: .1em solid #4A3F8A;
        background-color: white;
        color: black;
	padding: 1em;
}

a.portfolio {
	border-bottom: none;
	margin: 1em auto;
        color: black;
}

blockquote.testimonial {
	font-family: 'Fira Sans Condensed', sans-serif;
	font-size: 1.3em;
	font-weight: 300;
	margin: 3em .5em 1em .5em;
	line-height: 1.3em;
	border-left: .1em solid #0E989D;
	border-top: .1em solid #0E989D;
	border-bottom: .1em solid #0E989D;
	padding: 1em 1em 1em 1em;
        background-color: white;
        color: black;
}

span.quote {
	font-family: 'Fira Sans', serif;
	font-size: 42px;
	font-weight: 900;
}

span.endquote {
	font-family: 'Fira Sans', serif;
	font-weight: 900;
}

img.right {
	width: 380px;
	max-width: 95%;
	position: relative;
	top: 0px;
	border: 1px solid #000;
	left: 10px;
	border-radius: 3px;
	margin: 3em auto;
}

img.right-noborder {
	width: 190px;
	max-width: 95%;
	position: relative;
	top: 0px;
	left: 10px;
	border-radius: 3px;
	margin: 3em auto;
}

img.portfolio-right {
	width: 220px;
	max-width: 95%;
	position: relative;
	top: 0px;
	left: -100px;
	border: 3px solid #F48F7B;
	border-radius: 3px;
	margin: 0;
}

img.testimonial {
	width: 150px;
	max-width: 95%;
	position: relative;
	top: 0px;
	left: 10px;
	border-radius: 3px;
	border: 3px solid #000;
}

img.inline {
	width: 1175px;
	max-width: 95%;
	border: 1px solid #0E989D;
	position: relative;
	margin: 3em 0;
	border-radius: 3px;
}

img.inline-borderless {
	width: 1175px;
	max-width: 95%;
	position: relative;
	margin: 3em 0;
}

figure.prototype {
	margin: 2em auto;
}

.video-container {
	position: relative;
	height: 0;
	overflow: hidden;
	width: 100%;
	margin: 1.5em 0;
}

.video-container-16x9 {
	padding-bottom: 56.25%;
}

.video-container iframe {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
}

img.portrait {
	width: 300px;
	max-width: 95%;
	position: relative;
	margin: 2em 1em 3em 1em;
	border-radius: 3px;
	border: 3px solid #585388;
}

@media (min-width: 1px) and (max-width: 1200px) {
	blockquote.testimonial {
		border-bottom: none;
		border-right: .1em solid darkslateblue
	}
	blockquote {
		border-right: .1em solid darkslateblue;
		margin: 0px auto;
		max-width: 95%;
	}
	blockquote.portfolio-left {
		font-weight: 300;
		margin: 2em .5em 0 .5em;
		width: 95%;
		line-height: 1.3em;
		border-left: .1em solid darkslateblue;
		border-top: .1em solid darkslateblue;
		border-bottom: none;
		padding: .3em 0 .3em .3em;
	}
	img {
		margin: 1em auto;
		max-width: 95%;
	}
	img.right,
	img.inline,
	img.portrait,
	ul {
		margin: 1em auto;
		left: initial;
	}
	img.right {
		max-width: 95%;
		width: 560px;
	}
	img.portfolio-right {
		margin: 1em auto;
		left: initial;
		max-width: 95%;
	}
	img.testimonial {
		top: auto;
		left: auto;
		margin: 0 auto;
	}
	p {
		margin: 2em auto;
	}
	ul.bio {
		margin: 1em auto;
		width: 300px;
		left: initial;
	}
}

@media (min-width: 1000px) and (max-width: 1200px) {
	img {
		margin: 1em auto;
		max-width: 95%;
	}
	img.right,
	img.inline,
	img.portrait,
	ul {
		margin: 1em auto;
		left: initial;
	}
	img.testimonial {
		top: auto;
		left: auto;
		margin: 0 auto;
	}
	p {
		margin: 2em auto;
	}
	ul.bio {
		margin: 1em auto;
		width: 550px;
		left: initial;
	}
}

